--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,10 +35,10 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
-
+   
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.pasarlele_loka"
+        applicationId "com.thewhirringmechanic.pasarleleloka"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
