--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
+
   flutter_svg: ^0.17.4
   cupertino_icons: ^0.1.2
 
