--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   shared_preferences: ^0.5.6+3
 
+  google_sign_in: ^4.4.1
+  firebase_auth: ^0.15.5+3
+
   bloc: ^4.0.0
   flutter_bloc: ^4.0.0
 
