--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^0.5.6+3
+  flutter_secure_storage: ^3.3.3
 
   google_sign_in: ^4.4.1
   firebase_auth: ^0.15.5+3
